[package]
name = "mqqt_influx_esp"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.24"
dotenvy = "0.15"
mac_address = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
